# goit-pythonweb-hw-03

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  read_template.html  requirements.txt  style.css
storage/: data.json
